--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.5
   google_fonts: ^3.0.1
+  firebase_auth: ^3.11.1
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   flutter_test:
